# philo2

./: CMakeLists.txt  a.out  philo.c  philo.h  philo.h.gch
philo/: Makefile  philo
philo/includes/: philo.h
philo/philo.dSYM/Contents/Resources/DWARF/: philo
philo/srcs/: check_and_parse.c  init.c  philo.c  support_func.c
philo_bonus/: Makefile  philo_bonus
philo_bonus/includes/: philo_bonus.h
philo_bonus/philo_bonus.dSYM/Contents/Resources/DWARF/: philo_bonus
philo_bonus/srcs/: chk_and_parse.c  init.c  philo_bonus.c  support_func.c
